--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "next": "^13.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
